--- a/app/src/main/res/layout/pdf_viewer.xml
+++ b/app/src/main/res/layout/pdf_viewer.xml
@@ -4,13 +4,22 @@
     android:id="@+id/pdf_fragment"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/pdfpage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="457dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/icon"/>
+        android:src="@drawable/icon"
+        android:layout_weight="1.21" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="85dp"
+        android:layout_height="wrap_content"
+        android:text="Toggle view"
+        android:id="@+id/color_mode" />
 
 </LinearLayout>
