--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -10,4 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <ImageView
+        android:layout_width="111dp"
+        android:layout_height="111dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="right|center_vertical" />
+
 </FrameLayout>
